# Toggl2Timeshit

./: .gitignore  .npmrc  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.js  package.json  pnpm-lock.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: changelog.yml  codeql.yml  pages.yml  publish-apt.yml  publish-chocolatey.yml  publish-homebrew.yml  publish-packages.yml  publish-scoop.yml  publish-winget-initial.yml  publish-winget.yml  publish.yml  publishNEW.yml  release.yml  verify-windows-version.yml
api/: toggl.js
commands/: list.js  login.js
docs/: _config.yml  architecture.md  caching.md  development.md  distribution.md  getting-started.md  index.md  releases.md  settings.md  troubleshooting.md  usage.md
packaging/chocolatey/: timeshit.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
src/: app.rs  dates.rs  grouping.rs  main.rs  models.rs  rollups.rs  rounding.rs  storage.rs  theme.rs  theme_studio.rs  toggl.rs  ui.rs  update.rs
theme-studio/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
theme-studio/src/: App.svelte  app.css  main.ts
utils/: dateUtils.js  promptUtils.js
