[package]
name = "timeshit"
version = "1.0.0"
edition = "2024"
description = "Toggl Track to timesheet TUI"
license = "MIT"

[dependencies]
base64 = "0.22.1"
sha2 = "0.10.9"
arboard = "3.6.1"
chrono = { version = "0.4.43", features = ["clock", "serde"] }
clap = { version = "4.5.56", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
semver = "1.0.25"
flate2 = "1.0.35"
tar = "0.4.41"
tempfile = "3.10.1"
