[package]
name = "timeshit"
version = "1.6.1"
edition = "2024"
description = "Toggl Track to timesheet TUI"
license = "MIT"

[dependencies]
base64 = "0.22.1"
sha2 = "0.10.9"
arboard = "3.6.1"
chrono = { version = "0.4.43", features = ["clock", "serde"] }
crossterm = "0.29.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
semver = { version = "1.0.25", optional = true }
flate2 = { version = "1.0.35", optional = true }
tar = { version = "0.4.41", optional = true }
tempfile = { version = "3.10.1", optional = true }
zip = { version = "=7.3.0", optional = true }
[package.metadata.deb]
maintainer = "NoahNxT <noah.gillard@nxt-solutions.com>"
depends = "libc6 (>= 2.28)"
section = "utils"
priority = "optional"
assets = [
  ["target/release/timeshit", "usr/bin/timeshit", "755"],
  ["README.md", "usr/share/doc/timeshit/README.md", "644"],
  ["LICENSE", "usr/share/doc/timeshit/LICENSE", "644"],
]

[features]
default = ["update"]
update = ["dep:semver", "dep:flate2", "dep:tar", "dep:tempfile", "dep:zip"]
